--- a/pom.xml
+++ b/pom.xml
@@ -465,7 +465,7 @@
         <directory>src/main/resources</directory>
         <includes>
           <include>*.yml</include>
-          <include>/static/*</include>
+          <include>static/*</include>
         </includes>
       </resource>
     </resources>
